# aha-creative-tool

./: .gitignore  Architecture design.md  CLAUDE.md  Implementation plan.md  Product plan.md  README.md  Refactoring plan.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/reference/: README.md
docs/reference/dnd-kit/: README.md
docs/reference/g6-v5/: README.md
docs/reference/git2-rs/: README.md
docs/reference/motion/: README.md
docs/reference/tauri-plugin-keyring/: README.md
docs/reference/tauri-v2/: README.md
docs/reference/tiptap/: README.md
docs/reference/vercel-ai-sdk-v6/: README.md  providers.md
docs/reference/zundo/: README.md
docs/superpowers/plans/: 2026-06-11-ai-copilot.md
public/: manifest.json  service-worker.js
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_commands.rs  git_commands.rs  lib.rs  main.rs
src/application/services/: AIService.ts  ApplicationService.test.ts  ApplicationService.ts  ProjectService.test.ts  ProjectService.ts
src/domain/ai-engine/: AIEngine.test.ts  AIEngine.ts  types.ts
src/domain/deviation-detector/: DeviationDetector.test.ts  DeviationDetector.ts
src/domain/graph-engine/: GraphEngine.test.ts  GraphEngine.ts  NodeManager.test.ts  NodeManager.ts  types.ts
src/infrastructure/ai/: types.ts  (+5 more)
src/styles/: global.css
tests/e2e/: smoke.spec.ts
(+58 files in other folders)
